<resources>
    <string name="app_name">ProyectoPGL</string>
    <string name="reserva">Reserva de %1$s el dia %2$s a las %3$s</string>
    <string name="formulario_de_reserva">Formulario de reserva</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="confirmar">Confirmar</string>
    <string name="campos_incompletos">Por favor, completa todos los campos.</string>
    <string name="bonos">Bonos</string>
    <string name="bonosmenu">Usted se encuentra en bonos</string>
    <string name="reservas">Reservas</string>
    <string name="reservasmenu">Usted se encuentra en reservas</string>
    <string name="acerca_de">Acerca de</string>
    <string name="salir">Salir</string>
    <string name="confirmar_salida">Confirmar salida</string>
    <string name="estas_seguro_que_deseas_salir">¿Estas seguro que deseas salir de la aplicacion?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="informacion">Información de la aplicación</string>
    <string name="descripcion_app">Esta aplicacion fue desarrollada por Ismael Medina Waló para realizar reservas de forma sencilla y eficiente. Versión 1.0.0.</string>
    <string name="cerrar">Cerrar</string>
    <string name="eliminar">Eliminar</string>
    <string name="nombre_apellidos_invalidos">El nombre y los apellidos deben tener al menos 2 caracteres.</string>
    <string name="nombre_apellidos_solo_letras">El nombre y los apellidos solo pueden contener letras y espacios.</string>
    <string name="email_invalido">El correo electrónico no es válido.</string>
    <string name="fecha_hora_pasadas">La fecha y hora no pueden ser del pasado.</string>
    <string name="logout">Logout</string>
    <string name="registrarse">Registrarse</string>
    <string name="ya_tengo_una_cuenta">Ya tengo una cuenta</string>
    <string name="registarse">Registarse</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="repeat_password">repeat password</string>
    <string name="estas_seguro_que_deseas_cerrar_sesion">¿Cerrar sesion?</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="sesion_cerrada">Sesion cerrada</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="iniciar_sesi_n2">Iniciar sesión</string>
    <string name="crear_una_cuenta">Crear una cuenta</string>
    <string name="dialogo_eliminar_mensaje">¿Desea eliminar el producto?</string>
    <string name="dialogo_eliminar_titulo">Eliminar producto</string>
    <string name="btn_positivo_dialogo">Aceptar</string>
    <string name="btn_negativo_dialogo">Cancelar</string>
    <string name="error_eliminar">No se puedo eliminar el producto</string>
    <string name="dialogo_producto_text">Producto</string>
    <string name="dialogo_cantidad_text">Cantidad</string>
    <string name="dialogo_nuevo_producto">Guardar producto</string>
    <string name="txt_campos_oblig">Los campos son obligatorios</string>
    <string name="error_cantidad_no_valida">Cantidad no válida</string>
    <string name="rec_txt">Grabar</string>
    <string name="play_txt">Reproducir</string>
    <string name="stop_txt">Detener</string>
    <string name="grabadora">Grabadora</string>
    <string name="sensores">Sensores</string>
</resources>