<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewLogin"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/iniciar_sesi_n" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="40"
            app:errorEnabled="true"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/textViewLogin">

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="40"
            app:errorEnabled="true"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/textInputLayoutEmail">

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesi_n2"
            android:layout_below="@+id/textInputLayoutPassword"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/loginGoRegisterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crear_una_cuenta"
            android:layout_below="@+id/loginButton"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

